--- a/LanguageDesktop/Pages/MainMenu.axaml
+++ b/LanguageDesktop/Pages/MainMenu.axaml
@@ -18,5 +18,13 @@
                 <DataGridTextColumn Binding="{Binding Regdate}" Width="Auto" Header="Regdate"/>
             </DataGrid.Columns>
         </DataGrid>
+        
+        <ComboBox Grid.Row="1" Name="GenderCbx" HorizontalAlignment="Left" SelectionChanged="SelectingItemsControl_OnSelectionChanged">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}"></TextBlock>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
     </Grid>
 </UserControl>
